# buffallos-scraper

./: Dockerfile  README.md  app.py  downloader.py  entrypoint.sh  mailer.py  pyproject.toml  requirements.txt  scrape_store.py  supabase_auth.py  user_store.py
templates/: account.html  admin.html  forgot.html  index.html  login.html  reset.html  signup.html
