[project]
name = "10-website-downloader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "flask>=3.1.2",
    "gunicorn>=21.2.0",
    "playwright>=1.57.0",
    "psutil>=5.9.8",
    "requests>=2.32.5",
]
